--- a/Librarian.ipynb
+++ b/Librarian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnGwQKHswkyYR+6O/XL3Wt",
+      "authorship_tag": "ABX9TyOb17MMJ6Y6ja7zbI8g8ghQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/arsilva02/librarianproject/blob/main/Librarian.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 1:\n",
+        "\n",
+        "Data Gathering (Web Scraping)"
+      ],
+      "metadata": {
+        "id": "KF7yqi0qVRlp"
+      }
     },
     {
       "cell_type": "code",
