--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -1450,7 +1450,7 @@
       "metadata": {
         "id": "TrckFSbiAHLt"
       },
-      "execution_count": 17,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -1461,8 +1461,38 @@
       "metadata": {
         "id": "qtlU5ERjGtYS"
       },
-      "execution_count": 44,
+      "execution_count": 70,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "href"
+      ],
+      "metadata": {
+        "id": "uZIFTeN5KweH",
+        "outputId": "9364cc92-8cdc-4c59-ee14-fe6fd7e86b3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/books/b3fa4f03-b614-4060-aae6-9fec34cf7b14'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1474,7 +1504,7 @@
       "metadata": {
         "id": "QyQOqnbrGQdm"
       },
-      "execution_count": 47,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -1498,13 +1528,13 @@
         "        pages, pub_year =  float('nan'), float('nan')"
       ],
       "metadata": {
-        "id": "QfwiAgmnIjWU",
-        "outputId": "4f823a46-428d-4348-c074-2ab609e7e51d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QfwiAgmnIjWU",
+        "outputId": "6ac5531f-5fc4-44fe-c97c-aac0b55820dc"
       },
-      "execution_count": 64,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -1518,14 +1548,50 @@
     {
       "cell_type": "code",
       "source": [
-        "soup"
+        "tags = soup.find(class_=\"mt-2 my-1 md:w-10/12\").text.strip().split('\\n')\n",
+        "tags"
       ],
       "metadata": {
-        "id": "xDWcmjPRIeTi",
-        "outputId": "d3e95688-e6a0-4f30-ed36-2593ef8cee7e",
+        "id": "vo2FUyiMLoJg",
+        "outputId": "bb70dae6-d320-47d5-d69d-9380b140d726",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['fiction', 'classics', 'literary', 'romance', 'reflective', 'slow-paced']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "71lGngRlKXt4"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soup"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xDWcmjPRIeTi",
+        "outputId": "d3e95688-e6a0-4f30-ed36-2593ef8cee7e"
       },
       "execution_count": 48,
       "outputs": [
