--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -854,7 +854,7 @@
         "\n",
         "---\n",
         "\n",
-        "The important things I want to extract from this page are the number of pages (if the book is not an audio book) and the published year. There are also genre and mood tags, as seen in green in pink. I really like the way StoryGraph organizes these, which is why I wanted to take it from this website.\n",
+        "The important things I want to extract from this page are the number of pages (if the book is not an audio book) and the published year. There are also genre and mood tags, as seen in green in pink. I really like the way StoryGraph organizes these, which is why I wanted to take it from this website. Finally, as seen under the title of the book, is the series that the book belongs to (if the series is applicable, otherwise this header does not show up.)\n",
         "\n",
         "I also want to take the blurb for each book and the number of reviews, but I will do that on another book tracking site- Goodreads. Goodreads tends to have the best blurbs (in my opinion) and is more popular, so the number of reviews should be a bit more universal since StoryGraph has more of a niche audience. I also wanted to use both BeautifulSoup and Selenium in this project, and it is pretty hard to extract that information from StoryGraph using BeautifulSoup, so we’ll save that information for the Goodreads scraper.\n"
       ],
@@ -1320,11 +1320,11 @@
         "df[:9]['themes'].values"
       ],
       "metadata": {
-        "id": "qM5tH8svEMfe",
-        "outputId": "f00863aa-5a49-4e1a-a9d3-9f56e91811d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qM5tH8svEMfe",
+        "outputId": "f00863aa-5a49-4e1a-a9d3-9f56e91811d5"
       },
       "execution_count": 107,
       "outputs": [
