storygraph audio update

--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "6QrYoaeqDi3E"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -840,7 +840,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# StoryGraph Web Scraper"
+        "# Webscraping\n",
+        "\n",
+        "Two book tracking sites will be scraped for this project to get the following data:\n",
+        "\n",
+        "**Storygraph:**\n",
+        "\n",
+        "\n",
+        "*   genres/mood/pacing\n",
+        "*   if a book is in a series (as a boolean)\n",
+        "*   number of pages (if book is not an audiobook)\n",
+        "*   year of original publication\n",
+        "\n",
+        "**Goodreads:**\n",
+        "\n",
+        "\n",
+        "*   book blurb\n",
+        "*   number of reviews\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ddi6aqjwrpnG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## StoryGraph Web Scraper"
       ],
       "metadata": {
         "id": "rEbovTIsSsq6"
@@ -877,7 +904,7 @@
       "metadata": {
         "id": "fCpBd6guAEcm"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -887,7 +914,7 @@
         "#published year (first published, not when a specific edition was published)\n",
         "#number of pages (important to note that there are some audiobooks in this list, and those will be left blank. thats fine since im not a huge audiobook reader but this could be fixed)\n",
         "#tags. these are things like genres (literary, fantasy, etc.) and moods/pacing (dark, mysterious, slow-paced)\n",
-        "def scraper(df):\n",
+        "def sg_scraper(df):\n",
         "\n",
         "    master = 'app.thestorygraph.com' #site we are using\n",
         "    search_master = '/browse?search_term=' #search url\n",
@@ -898,6 +925,7 @@
         "        title = row['Title']\n",
         "        author = row['Authors'].replace(\", \", \" \")\n",
         "        isbn = row['ISBN/UID']\n",
+        "        format = row['Format']\n",
         "        data = {}\n",
         "\n",
         "        if pd.isna(isbn):\n",
@@ -923,20 +951,34 @@
         "            text = soup.find(class_='text-sm font-light text-darkestGrey dark:text-grey mt-1').text.strip() #changed to match working example\n",
         "\n",
         "            try:\n",
-        "                pages_match = re.search(r\"(\\d+)\\s+pages\", text)\n",
-        "                year_match = re.search(r\"first pub (\\d{4})\", text)\n",
         "\n",
-        "                pages = int(pages_match.group(1)) if pages_match else float('nan')\n",
+        "                if format == 'audio':\n",
+        "                  audio_match = re.search(r'(\\d+)\\s*hours?,\\s*(\\d+)\\s*minutes?', text)\n",
+        "                  hours = int(audio_match.group(1)) if audio_match else np.nan\n",
+        "                  minutes = int(audio_match.group(2)) if audio_match else np.nan\n",
+        "                  length = hours * 60 + minutes\n",
+        "\n",
+        "                else:\n",
+        "                  pages_match = re.search(r\"(\\d+)\\s+pages\", text)\n",
+        "                  pages = int(pages_match.group(1)) if pages_match else np.nan\n",
+        "                  length = pages\n",
+        "                data['length'] = length\n",
+        "            except AttributeError:\n",
+        "                data['length'] = np.nan\n",
+        "            except Exception as e:\n",
+        "                print(f\"An unexpected error occurred (length): {e}\")\n",
+        "                data['length'] = np.nan\n",
+        "\n",
+        "            try:\n",
+        "                year_match = re.search(r\"first pub (\\d{4})\", text)\n",
         "                pub_year = int(year_match.group(1)) if year_match else float('nan')\n",
         "\n",
-        "                data['pages'] = pages\n",
         "                data['pub_year'] = pub_year\n",
         "\n",
         "            except (AttributeError, ValueError):\n",
-        "                data['pages'], data['pub_year'] = float('nan'), float('nan')\n",
+        "                 data['pub_year'] = np.nan\n",
         "            except Exception as e:\n",
-        "                print(f\"An unexpected error occurred (pages/year): {e}\")\n",
-        "                data['pages'], data['pub_year'] = float('nan'), float('nan')\n",
+        "                data['pub_year'] = np.nan\n",
         "\n",
         "            try:\n",
         "                tags = soup.find(class_=\"mt-2 my-1 md:w-10/12\").text.strip().split('\\n')\n",
@@ -946,6 +988,8 @@
         "            except Exception as e:\n",
         "                print(f\"An unexpected error occurred (tags): {e}\")\n",
         "                data['tags'] = []\n",
+        "\n",
+        "\n",
         "            series_element = soup.find(class_='font-semibold hover:text-cyan-700 dark:hover:text-cyan-500 text-lg')\n",
         "            if series_element:\n",
         "              series = True\n",
@@ -955,33 +999,49 @@
         "\n",
         "        except (requests.exceptions.RequestException, AttributeError, TypeError, KeyError) as e:\n",
         "            print(f\"Error processing {search_url}: {e}\")\n",
-        "            data['pages'], data['pub_year'], data['tags'] = float('nan'), float('nan'), []\n",
+        "            data['length'], data['pub_year'], data['tags'] = np.nan,np.nan, []\n",
         "        except Exception as e:\n",
         "            print(f\"An unexpected error occurred(general): {e}\")\n",
-        "            data['pages'], data['pub_year'], data['tags'] = float('nan'), float('nan'), []\n",
+        "            data['length'], data['pub_year'], data['tags'] = np.nan,np.nan, []\n",
         "\n",
         "        results.append(data)\n",
         "\n",
         "    # Create new columns from the results\n",
-        "    df['pages'] = [result.get('pages', float('nan')) for result in results]\n",
-        "    df['pub_year'] = [result.get('pub_year', float('nan')) for result in results]\n",
+        "    df['length'] = [result.get('length', np.nan) for result in results]\n",
+        "    df['pub_year'] = [result.get('pub_year', np.nan) for result in results]\n",
         "    df['tags'] = [result.get('tags', []) for result in results]\n",
         "    df['series'] = [result.get('series', False) for result in results]\n",
         "\n",
-        "    return df\n",
-        "\n",
-        "scraper(df)"
+        "    return df\n"
       ],
       "metadata": {
-        "id": "F6txn9rYQJfR"
+        "id": "F6txn9rYQJfR",
+        "outputId": "c3bc05cd-feee-4bf1-b5c7-840b7178f5aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Say Nothing: A True Story of Murder and Memory in Northern Ireland\n",
+            "Chernobyl Prayer: A Chronicle of the Future\n",
+            "Dead Water\n",
+            "Beartown\n",
+            "A Woman Is No Man\n",
+            "Dune\n",
+            "Chainsaw Man, Vol. 4: The Gun is Mightier\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Goodreads Web Scraper"
+        "## Goodreads Web Scraper"
       ],
       "metadata": {
         "id": "BHhTwAVTZNA6"
@@ -1014,7 +1074,7 @@
       "metadata": {
         "id": "ajXwsQDofG3Z"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1092,7 @@
       "metadata": {
         "id": "gEbGfOfpfNMQ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,7 +1184,7 @@
       "metadata": {
         "id": "KXz99lpp0WpO"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1155,7 +1215,7 @@
       "metadata": {
         "id": "R5g4rIAgbp_X"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1272,7 @@
       "metadata": {
         "id": "znV0uFFajbvx"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1223,7 +1283,7 @@
       "metadata": {
         "id": "9sOT6MdDXbRF"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1254,7 +1314,7 @@
       "metadata": {
         "id": "exf34dnVB8lI"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1311,7 +1371,7 @@
       "metadata": {
         "id": "nhSoE-diB2zY"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1326,7 +1386,7 @@
         "id": "qM5tH8svEMfe",
         "outputId": "f00863aa-5a49-4e1a-a9d3-9f56e91811d5"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1364,7 +1424,7 @@
         "id": "W2kLXyaxYoCh",
         "outputId": "0a1decb4-b980-4d6a-b0c8-536fc18724ea"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
