--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -1173,7 +1173,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 318
+          "height": 228
         },
         "id": "APXubUZtrbAc",
         "outputId": "6151f076-e5aa-440c-a09b-3c11ae9a1b99"
@@ -1832,12 +1832,13 @@
     {
       "cell_type": "code",
       "source": [
-        "openaikey = \"OPENAIKEYHERE\""
+        "from google.colab import userdata\n",
+        "openaikey = userdata.get('openai')"
       ],
       "metadata": {
         "id": "exf34dnVB8lI"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1851,14 +1852,12 @@
         "\n",
         "\n",
         "    template = f\"\"\"\n",
-        "        You are a literary analyst. Extract the main themes from the following book blurb.\n",
+        "        You are a literary analyst. Please extract the main themes from the following book blurb and other information.\n",
         "        Make sure to avoid niche or very specific themes. If themes are related, consolidate them into broader themes.\n",
-        "        You can have as many themes as you like, but again keep them pretty general. I would rather have too many themes than not enough. Each theme should not be more than 4 words long.\n",
+        "        You can have as many themes as you like, but again keep them pretty general. I would rather have too many themes than not enough. Each theme should not be more than 4 words long. keep in mind that the blurb may talk about the specific edition or translation a text, but please focus on the text itself\n",
         "        Return the themes as a comma-separated list (no other text).\n",
         "\n",
-        "        your output should look like this (of course, replace with relevant themes):\n",
-        "\n",
-        "        motherhood, power vs. control, lesbian relationship, romance, friendship, trauma, grief, abstract\n",
+        "        your output should look like this (of course, replace with relevant themes):motherhood, power vs. control, lesbian relationship, romance, friendship, trauma, grief, abstract\n",
         "\n",
         "\n",
         "        here is information about the book:\n",
@@ -1894,43 +1893,8 @@
       "metadata": {
         "id": "nhSoE-diB2zY"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df[:9]['themes'].values"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qM5tH8svEMfe",
-        "outputId": "f00863aa-5a49-4e1a-a9d3-9f56e91811d5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([list(['terror', 'loss', 'sacrifice', 'memory', 'danger', 'darkness', 'survival', 'horror', 'obsession', 'relationships']),\n",
-              "       list(['family dynamics', 'personal struggle', 'secrets and lies', 'loss and grief', 'legacy and inheritance', 'emotional conflict', 'self-discovery', 'societal pressures', 'resilience', 'redemption']),\n",
-              "       list(['addiction', 'family dynamics', 'childhood struggle', 'poverty', 'pursuit of happiness', 'identity', 'societal issues', 'love and support', 'resilience', 'loneliness']),\n",
-              "       list(['transformation', 'mortality', 'love', 'mystery', 'sacrifice', 'the unknown', 'journey', 'resilience', 'isolation']),\n",
-              "       list(['sisterhood', 'survival', 'redemption', 'sacrifice', 'good vs. evil', 'fear', 'loyalty', 'adventure', 'empowerment']),\n",
-              "       list([\"women's sexuality\", 'self-acceptance', 'confidence', 'contextual influences', 'personal empowerment', 'health education', 'body image', 'research and science', 'intimacy', 'joy']),\n",
-              "       list(['self-discovery', 'love and relationships', 'friendship', 'opposites attract', 'personal growth', 'humor', 'romantic tension', 'LGBTQ+ identity', 'college life']),\n",
-              "       list(['love', 'legacy', 'loss', 'war', 'identity', 'mystery', 'family', 'redemption', 'memory', 'connection', 'resilience']),\n",
-              "       list(['education', 'guidance', 'encouragement', 'accessibility', 'communication', 'understanding', 'support', 'self-improvement'])],\n",
-              "      dtype=object)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 107
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1945,9 +1909,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W2kLXyaxYoCh",
-        "outputId": "bf0ac0f4-ce8d-43cc-9e05-0cee1adc487b"
+        "outputId": "33277265-97e0-4876-f3ec-4f904c9ff9c1"
       },
-      "execution_count": 47,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
