--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "6QrYoaeqDi3E"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,6 +838,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df['Last Date Read'] = pd.to_datetime(df['Last Date Read'], errors='coerce')\n"
+      ],
+      "metadata": {
+        "id": "KQwhgtkRVCdt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Webscraping\n",
@@ -916,7 +927,7 @@
       "metadata": {
         "id": "ajXwsQDofG3Z"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -934,7 +945,7 @@
       "metadata": {
         "id": "fCpBd6guAEcm"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1108,7 @@
       "metadata": {
         "id": "F6txn9rYQJfR"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1162,7 +1173,7 @@
       "metadata": {
         "id": "LPNRm4M_rq9s"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,7 +1189,7 @@
         "id": "APXubUZtrbAc",
         "outputId": "6151f076-e5aa-440c-a09b-3c11ae9a1b99"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1569,7 +1580,7 @@
       "metadata": {
         "id": "sm8BlollttV5"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1599,7 +1610,7 @@
       "metadata": {
         "id": "uAZHpRptvnvp"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1738,7 +1749,7 @@
       "metadata": {
         "id": "R5g4rIAgbp_X"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1795,7 +1806,7 @@
       "metadata": {
         "id": "znV0uFFajbvx"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1806,7 +1817,7 @@
       "metadata": {
         "id": "9sOT6MdDXbRF"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1838,7 +1849,7 @@
       "metadata": {
         "id": "exf34dnVB8lI"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1893,7 +1904,7 @@
       "metadata": {
         "id": "nhSoE-diB2zY"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1911,7 +1922,7 @@
         "id": "W2kLXyaxYoCh",
         "outputId": "33277265-97e0-4876-f3ec-4f904c9ff9c1"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
